tests/cases/structs/errors/union-by-local-alias-assignment.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct StreamPayload {
  value: i64,
}

struct BlockPayload {
  value: i64,
}

struct Packet {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => StreamPayload,
    block => BlockPayload,
  },
}

fn score(packet: Packet) -> i64 {
  var fragment = packet.fragment;
  fragment = block(BlockPayload { value: 40 });
  return 0;
}

fn main() -> i64 {
  let packet = Packet {
    security: SecurityParameters { cipher_type: stream },
    fragment: stream(StreamPayload { value: 41 }),
  };
  return score(packet);
}
